<resources>
    <string name="app_name">Assignment6</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dis1">Display Image 1</string>
    <string name="dis2">Display Image 2</string>
    <string name="dis3">Display Image 3</string>
    <string name="desc1">First image of green robot</string>
    <string name="desc2">Second image of green robot</string>
    <string name="desc3">Third image of green robot</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>